# fleet-warden

./: .gitignore  AGENTS.md  README.md  start-dev.sh
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  worker.py
backend/app/agents/: initializer.py  node_agent.py
backend/app/api/: routes.py  schemas.py
backend/app/domain/: enums.py  state_machine.py
backend/app/executors/: adapters.py  base.py  remote_agent.py  ssh_command.py
backend/app/infra/: audit.py  ssh_config.py
backend/app/llm/: client.py
backend/app/orchestrator/: audit_service.py  commands.py  errors.py  service.py
backend/app/persistence/: models.py  session.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_orchestrator.py  test_session_init.py  test_ssh_command_executor.py  test_ssh_config.py  test_state_machine.py  test_state_machine_matrix.py
docs/: PRD_v1.md  orchestrator_review_checklist.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: ActionConsole.tsx  ContextRail.tsx  CreateTaskWorkspace.tsx  DetailDrawer.tsx  NodeSelectionRail.tsx  SectionCard.tsx  TaskSummaryRail.tsx
frontend/src/lib/: api.ts  guards.ts  presenters.ts
frontend/src/pages/: ApprovalQueue.tsx  NodeDetailPage.tsx  TaskCreatePage.tsx  TaskOverviewPage.tsx  TaskSpecPage.tsx
