[project]
name = "fleetwarden-backend"
version = "0.1.0"
description = "FleetWarden V1 backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "sqlalchemy>=2.0.38",
  "pydantic>=2.10.6",
  "uvicorn>=0.35.0",
  "asyncssh>=2.21.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.3.5",
]

[project.scripts]
fleetwarden-api = "app.main:run"
fleetwarden-worker = "app.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
